--- a/src/main/resources/templates/summarize/index.html
+++ b/src/main/resources/templates/summarize/index.html
@@ -39,7 +39,7 @@
 									<th scope="col">ID</th>
 									<th scope="col">まとめ名</th>
 									<th scope="col">製品名</th>
-									<th scope="col">マニュアル名</th>
+									<th scope="col"></th>
 									<th scope="col"></th>
 								</tr>
 							</thead>
