--- a/src/main/resources/templates/summarize/register.html
+++ b/src/main/resources/templates/summarize/register.html
@@ -1,86 +1,96 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-	<head>
-		<div th:replace="~{fragment :: meta}"></div>
-		
-		<div th:replace="~{fragment :: styles}"></div>
-		
-		<title>まとめ登録</title>
-	</head>
-	<body>
-		<div th:replace="~{fragment :: header}"></div>
-		
-		<main>
-			<div class="container">
-				<div class="row justify-content-center">
-	               <div class="col-xl-5 col-lg-6 col-md-8">
-	
-	                   <h1 class="mb-4 text-center">まとめ登録</h1>
-	
-	                   <form method="post" th:action="@{/summarize/create}" th:object="${summarizeRegisterForm}" enctype="multipart/form-data">
-	                       <div class="form-group row mb-3">
-	                           <div class="col-md-5">
-	                               <label for="name" class="col-form-label text-md-left fw-bold">
-	                                   <div class="d-flex align-items-center">
-	                                       <span class="me-1">まとめ名</span>
-	                                       <span class="badge bg-danger">必須</span>
-	                                   </div>
-	                               </label>
-	                           </div>
-	                           <div class="col-md-7">
-	                               <div th:if="${#fields.hasErrors('name')}" class="text-danger small mb-2" th:errors="*{name}"></div>
-	                               <input type="text" class="form-control" th:field="*{name}" autocomplete="name" autofocus placeholder="まとめ名">
-	                           </div>
-	                       </div>
-						   
-						   <div class="form-group row mb-3">
-								<div class="col-md-4">
-									<label for="imageFile" class="col-form-label text-md-left fw-bold">製品画像</label>
-								</div>
-								<div class="col-md-8">
-									<div th:if="${#fields.hasErrors('imageFile')}" class="text-danger small mb-2" th:errors="*{imageFile}"></div>
-									<input type="file" class="form-control" th:field="*{imageFile}">
-								</div>
+
+<head>
+	<div th:replace="~{fragment :: meta}"></div>
+
+	<div th:replace="~{fragment :: styles}"></div>
+
+	<title>まとめ登録</title>
+</head>
+
+<body>
+	<div th:replace="~{fragment :: header}"></div>
+
+	<main>
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-xl-5 col-lg-6 col-md-8">
+
+					<h1 class="mb-4 text-center">まとめ登録</h1>
+
+					<form method="post" th:action="@{/summarize/create}" th:object="${summarizeRegisterForm}"
+						enctype="multipart/form-data">
+						<div class="form-group row mb-3">
+							<div class="col-md-5">
+								<label for="name" class="col-form-label text-md-left fw-bold">
+									<span class="me-1">まとめ名</span>
+									<span class="badge bg-danger">必須</span>
+								</label>
 							</div>
-								
-							<div class="form-group row mb-3">
-								<div class="col-md-4">
-									<label for="productImageFile" class="col-form-label text-md-left fw-bold">製品画像</label>
-								</div>
-								<div class="col-md-8">
-									<div th:if="${#fields.hasErrors('productImageFile')}" class="text-danger small mb-2 w-100 img-small"
-										th:errors="*{productImageFile}"></div>
-									<input type="file" class="form-control" th:field="*{productImageFile}">
-								</div>
+							<div class="col-md-7">
+								<div th:if="${#fields.hasErrors('name')}" class="text-danger small mb-2"
+									th:errors="*{name}"></div>
+								<input type="text" class="form-control" th:field="*{name}" autocomplete="name" autofocus
+									placeholder="まとめ名">
 							</div>
-							
-							<div class="form-group row mb-3">
-								<div class="col-md-4">
-									<label for="manualImageFile" class="col-form-label text-md-left fw-bold">マニュアル画像</label>
-								</div>
-								<div class="col-md-8">
-									<div th:if="${#fields.hasErrors('manualImageFile')}" class="text-danger small mb-2 w-100 img-small"
-										th:errors="*{manualImageFile}"></div>
-									<input type="file" class="form-control" th:field="*{manualImageFile}">
-								</div>
+						</div>
+						<!--製品情報ドロップダウン-->
+						<div class="form-group row mb-3">
+							<div class="col-md-5">
+								<label for="name" class="col-form-label text-md-left fw-bold">
+									<span class="me-1">製品名</span>
+									<span class="badge bg-info">選択</span>
+								</label>
 							</div>
-							
-							<!-- 選択された画像の表示場所 -->
-							<div class="row" id="imagePreview"></div>
-   
-	                       <div class="d-flex justify-content-center my-4">
-	                           <button type="submit" class="btn shadow-sm w-50">登録</button>
-	                       </div>
-	                   </form>
-	
-	               </div>
-	           </div>
+
+							<div class="col-md-7">
+								<div th:if="${#fields.hasErrors('selectedProductId')}" class="text-danger small mb-2"
+									th:errors="*{selectedProductId}"></div>
+								<select id="product" class="form-control" th:field="*{selectedProductId}">
+									<option value="">-- 製品を選択してください --</option>
+									<option th:each="product : ${productList}" th:value="${product.id}"
+										th:text="${product.name}">
+									</option>
+								</select>
+							</div>
+						</div>
+
+						<!--マニュアル情報ドロップダウン-->
+						<div class="form-group row mb-3">
+							<div class="col-md-5">
+								<label for="name" class="col-form-label text-md-left fw-bold">
+									<span class="me-1">マニュアル名</span>
+									<span class="badge bg-info">選択</span>
+								</label>
+							</div>
+
+							<div class="col-md-7">
+								<div th:if="${#fields.hasErrors('selectedManualId')}" class="text-danger small mb-2"
+									th:errors="*{selectedManualId}"></div>
+								<select id="product" class="form-control" th:field="*{selectedManualId}">
+									<option value="">-- 製品を選択してください --</option>
+									<option th:each="manual : ${manualList}" th:value="${manual.id}"
+										th:text="${manual.name}">
+									</option>
+								</select>
+							</div>
+						</div>
+
+						<div class="d-flex justify-content-center my-4">
+							<button type="submit" class="btn shadow-sm w-50">登録</button>
+						</div>
+					</form>
+
+				</div>
 			</div>
-		</main>
-		
-		<!--フッター-->
-		<div th:replace="~{fragment :: footer}"></div>
-		
-		<div th:replace="~{fragment :: scripts}"></div>
-	</body>
+		</div>
+	</main>
+
+	<!--フッター-->
+	<div th:replace="~{fragment :: footer}"></div>
+
+	<div th:replace="~{fragment :: scripts}"></div>
+</body>
+
 </html>
